src/test/ui/span/issue-39698.stderr
error[E0408]: variable `d` from pattern #1 isn't bound in patterns #3, #4
  --> $DIR/issue-39698.rs:20:37
   |
20 |         T::T1(a, d) | T::T2(d, b) | T::T3(c) | T::T4(a) => { println!("{:?}", a); }
   |                  -                  ^^^^^^^^   ^^^^^^^^ pattern doesn't bind `d`
   |                  |                  |
   |                  |                  pattern doesn't bind `d`
   |                  variable not in all patterns

error[E0408]: variable `a` from pattern #1 isn't bound in patterns #2, #3
  --> $DIR/issue-39698.rs:20:23
   |
20 |         T::T1(a, d) | T::T2(d, b) | T::T3(c) | T::T4(a) => { println!("{:?}", a); }
   |               -       ^^^^^^^^^^^   ^^^^^^^^ pattern doesn't bind `a`
   |               |       |
   |               |       pattern doesn't bind `a`
   |               variable not in all patterns

error[E0408]: variable `b` from pattern #2, variable `c` from pattern #3 aren't bound in pattern #1
  --> $DIR/issue-39698.rs:20:32
   |
20 |         T::T1(a, d) | T::T2(d, b) | T::T3(c) | T::T4(a) => { println!("{:?}", a); }
   |         -----------            ^          ^ variable not in all patterns
   |         |                      |
   |         |                      variable not in all patterns
   |         pattern doesn't bind `b`, `c`

error: aborting due to 3 previous errors

